add cart create routes and fix user
